--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b4bb095f",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/review1.pkl...\n"
+      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/Reviewer.pkl...\n"
      ]
     }
    ],
@@ -61,14 +61,42 @@
     "\n",
     "reviewer.set_review_data(\n",
     "    # Enter the file path where you would like your pkl file of your review data to be stored\n",
-    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/review1.pkl',\n",
+    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/Reviewer.pkl',\n",
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
     "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/test_data_for_reviewer.txt', sep='\\t')\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(test_param='testing param kwargs')"
+    "reviewer.set_review_app()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb1d9f9",
+   "metadata": {},
+   "source": [
+    "### Pass custom column color assignments into the review app with the following syntax:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14aed763",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reviewer.set_review_app(custom_colors=[\n",
+    "#     [column_id_1, filter_query_1, text_color_1, background_color_1], \n",
+    "#     [<same for all additional columns/queries>]\n",
+    "# ])\n",
+    "\n",
+    "#Example (uncomment to try):\n",
+    "\n",
+    "# reviewer.set_review_app(custom_colors=[\n",
+    "#     ['Variant_Classification', 'Silent', 'Black', 'LightBlue'], \n",
+    "#     ['Variant_Classification', 'Missense_Mutation', 'White', 'Indigo']\n",
+    "# ])"
    ]
   },
   {
@@ -91,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "082f38f7",
+   "id": "a77a6b12",
    "metadata": {},
    "source": [
     "### Add your own annotations below"
@@ -100,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "154bab23",
+   "id": "f6e4e9a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213942fd",
+   "id": "040af090",
    "metadata": {},
    "source": [
     "## Run"
@@ -117,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "2a724f40",
+   "execution_count": 32,
+   "id": "ee299041",
    "metadata": {},
    "outputs": [
     {
@@ -126,16 +154,6 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://0.0.0.0:8088/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
-      "\n",
-      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
-      "\n"
      ]
     }
    ],
@@ -146,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59eb1e0b",
+   "id": "da9d63d5",
    "metadata": {},
    "outputs": [],
    "source": []
