--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/Reviewers.pkl...\n"
+      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/Reviewer.pkl...\n"
      ]
     }
    ],
@@ -61,14 +61,16 @@
     "\n",
     "reviewer.set_review_data(\n",
     "    # Enter the file path where you would like your pkl file of your review data to be stored\n",
-    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/Reviewers.pkl',\n",
+    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/Reviewer.pkl',\n",
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
-    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/test_data_for_reviewer.txt', sep='\\t').set_index('participant_id')\n",
+    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/updated_test_data_for_reviewer.csv').set_index('participant_id'),\n",
+    "    preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/preprocess_data',\n",
+    "    samples_fn='/Users/svanseters/Broad/JupyterReviewer/samples.csv'\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(drivers_fn='drivers.csv')"
+    "reviewer.set_review_app(biospecimens_fn='/Users/svanseters/Broad/JupyterReviewer/biospecimens.7oqli.tsv', samples_fn='/Users/svanseters/Broad/JupyterReviewer/samples.csv', preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/preprocess_data', drivers_fn='drivers.csv')\n"
    ]
   },
   {
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "ee299041",
    "metadata": {},
    "outputs": [
@@ -153,18 +155,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://0.0.0.0:8088/\n"
+      "Dash app running on http://0.0.0.0:8086/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
+      "\n",
+      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "\n",
+      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:261: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:262: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:281: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:286: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:288: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "reviewer.run(mode='external', port=8088)"
+    "reviewer.run(mode='external', port=8086)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "936e10c1",
+   "id": "1ca3c963",
    "metadata": {},
    "outputs": [],
    "source": []
