Change to be specific to Patient Reviewer

--- a/example_notebooks/UserPatientReviewer.ipynb
+++ b/example_notebooks/UserPatientReviewer.ipynb
@@ -26,8 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from JupyterReviewer.Reviewers.PatientReviewer import PatientReviewer\n",
-    "from JupyterReviewer.Reviewers.PatientReviewer import collect_data\n",
+    "from PatientReviewer.Reviewers.PatientReviewer import PatientReviewer, collect_data\n",
     "from JupyterReviewer.Data import DataAnnotation\n",
     "from JupyterReviewer.ReviewDataApp import AppComponent\n",
     "from JupyterReviewer.DataTypes.PatientSampleData import PatientSampleData\n",
@@ -312,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
