Refactor to use AnnoMate
Still need to clean up tutorial/example notebook (to use simulated data, etc.)

--- a/example_notebooks/UserPatientReviewer.ipynb
+++ b/example_notebooks/UserPatientReviewer.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "47f81ac9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Patient Reviewer"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "cd5a4c6f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -23,26 +31,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b4bb095f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "from PatientReviewer.Reviewers.PatientReviewer import PatientReviewer, collect_data\n",
-    "from JupyterReviewer.Data import DataAnnotation\n",
-    "from JupyterReviewer.ReviewDataApp import AppComponent\n",
-    "from JupyterReviewer.DataTypes.PatientSampleData import PatientSampleData\n",
-    "\n",
-    "import pandas as pd\n",
-    "from dash import html\n",
-    "import numpy as np\n",
-    "from dash import dcc\n",
-    "import plotly.express as px\n",
-    "from dash.dependencies import Input, Output, State"
+    "from PatientReviewer.Reviewers.PatientReviewer import PatientReviewer, collect_data"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1bd978bf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Edit the code below according to the commented directions"
    ]
@@ -50,7 +56,11 @@
   {
    "cell_type": "markdown",
    "id": "75bd47db",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Generate a participant and a sample file"
    ]
@@ -60,7 +70,10 @@
    "execution_count": 3,
    "id": "b9ce8e67",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -83,7 +96,11 @@
    "cell_type": "code",
    "execution_count": 58,
    "id": "6bb02877",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "new_participants_df = participants_df[participants_df['participant_id'] == 'ONC7299'].reset_index(drop=True)"
@@ -93,7 +110,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "1485a5bd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "new_samples_df = samples_df[samples_df['participant_id'] == 'ONC7299']"
@@ -102,7 +123,11 @@
   {
    "cell_type": "markdown",
    "id": "b1ee277e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Create patient reviewer object"
    ]
@@ -111,7 +136,11 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "e496d5e4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -142,10 +171,9 @@
     "    # Enter the file path to your data to be reviewed\n",
     "    participant_df=new_participants_df.set_index('participant_id'),\n",
     "    sample_df=new_samples_df.set_index('sample_id'),\n",
-    "    preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data'\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data', drivers_fn='../../example_notebooks/example_data/drivers.csv')\n",
+    "reviewer.set_review_app(drivers_fn='../../example_notebooks/example_data/drivers.csv')\n",
     "reviewer.set_default_review_data_annotations_configuration()\n",
     "reviewer.set_default_autofill()\n"
    ]
@@ -153,7 +181,11 @@
   {
    "cell_type": "markdown",
    "id": "4e6091be",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Pass custom column color assignments into the review app with the following syntax:"
    ]
@@ -162,7 +194,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "119080a6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# reviewer.set_review_app(custom_colors=[\n",
@@ -184,7 +220,11 @@
   {
    "cell_type": "markdown",
    "id": "b8e5688a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Add your own components below "
    ]
@@ -193,7 +233,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "df4ef73d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# reviewer.app.add_component(AppComponent('component name', layout))\n",
@@ -219,7 +263,11 @@
   {
    "cell_type": "markdown",
    "id": "a77a6b12",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Add your own annotations below"
    ]
@@ -228,7 +276,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "f6e4e9a6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# reviewer.app.add_review_data_annotation('annot name', ReviewDataAnnotation())\n",
@@ -249,7 +301,11 @@
   {
    "cell_type": "markdown",
    "id": "040af090",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Run"
    ]
@@ -258,7 +314,11 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "ee299041",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -290,7 +350,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "258f55d7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
