add kwargs for column name flexibility, run new simulated data, README updates

--- a/example_notebooks/UserPatientReviewer.ipynb
+++ b/example_notebooks/UserPatientReviewer.ipynb
@@ -14,23 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "cd5a4c6f",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -38,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "b4bb095f",
    "metadata": {
     "pycharm": {
@@ -76,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "b9ce8e67",
    "metadata": {
     "pycharm": {
@@ -84,7 +75,16 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svansete/Code/getzlab/AnnoMate/annoEnv/lib/python3.9/site-packages/google/auth/_default.py:78: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    }
+   ],
    "source": [
     "samples_df, participants_df = collect_data(\n",
     "    'example_data/example_patient_reviewer_paired_clean_input1.yaml'\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "6bb02877",
    "metadata": {
     "pycharm": {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "1485a5bd",
    "metadata": {
     "pycharm": {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "e496d5e4",
    "metadata": {
     "pycharm": {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "ee299041",
    "metadata": {
     "pycharm": {
